# Online-Cinema

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose-local.yml  docker-compose-prod.yml  pyproject.toml
.github/workflows/: ci.yml
commands/: run_migration.sh
src/: main.py
src/database/: __init__.py  session.py
src/database/migrations/: env.py
src/database/models/: __init__.py  accounts.py  cart.py  movies.py  orders.py  payment.py  shopping_cart.py
src/database/validators/: __init__.py  profile.py  users.py
src/dependencies/: accounts.py  movies.py  order.py  payment.py  shopping_cart.py
src/exceptions/: __init__.py  cart_item.py  shopping_cart.py
src/notifications/: emails.py  interfaces.py
src/repositories/: accounts_rep.py  cart_item_rep.py  order_item_rep.py  order_rep.py  payment_item_rep.py  payments_rep.py  shopping_cart_rep.py
src/repositories/movies_rep/: certification.py  comment.py  director.py  genre.py  movie.py  star.py
src/routes/: __init__.py  accounts.py  order.py  payments.py  profiles.py  shopping_cart.py
src/routes/movies/: certification.py  director.py  genre.py  movie.py  star.py
src/schemas/: __init__.py  accounts.py  movie.py  order.py  payment.py  profiles.py  shopping_cart.py
src/security/: http.py  jwt_auth_manager.py
src/services/: order_service.py  payment.py  shopping_cart.py
src/services/movie_service/: certification.py  comment.py  director.py  genre.py  movie.py  star.py
src/storages/: interfaces.py  s3.py
(+9 files in other folders)
