[project]
name = "online-cinema"
version = "0.1.0"
description = ""
authors = [
    {name = "Vova",email = "vova.gld05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "config (>=0.5.1,<0.6.0)",
    "notifications (>=0.3.2,<0.4.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.1"
pre-commit = "^4.2.0"

